[gd_scene load_steps=132 format=2]

[ext_resource path="res://cycle/rooms/room_rafters.tscn" type="PackedScene" id=1]
[ext_resource path="res://_addons/intended_direction.tscn" type="PackedScene" id=2]
[ext_resource path="res://cycle/player/player.gd" type="Script" id=3]
[ext_resource path="res://cycle/player/player.png" type="Texture" id=4]
[ext_resource path="res://cycle/hud/time_left_hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://cycle/cycle.gd" type="Script" id=6]
[ext_resource path="res://cycle/camera.gd" type="Script" id=7]
[ext_resource path="res://cycle/rooms/room_distant_mountains.tscn" type="PackedScene" id=8]
[ext_resource path="res://cycle/rooms/room_safehouse.tscn" type="PackedScene" id=9]
[ext_resource path="res://cycle/rooms/room_big_disco.tscn" type="PackedScene" id=10]
[ext_resource path="res://cycle/rooms/room_pyramid_scheme.tscn" type="PackedScene" id=11]
[ext_resource path="res://cycle/rooms/room_maze.tscn" type="PackedScene" id=19]
[ext_resource path="res://cycle/inferno/inferno_render_400x100.png" type="Texture" id=22]
[ext_resource path="res://cycle/inferno_hud.gd" type="Script" id=23]
[ext_resource path="res://cycle/hud/wallet_hud.tscn" type="PackedScene" id=27]
[ext_resource path="res://font_huge.tres" type="DynamicFont" id=28]
[ext_resource path="res://hud_theme.tres" type="Theme" id=29]
[ext_resource path="res://cycle/countdown_label.gd" type="Script" id=30]
[ext_resource path="res://cycle/big_time.gd" type="Script" id=31]
[ext_resource path="res://cycle/player/one_paunch/swing.wav" type="AudioStream" id=32]
[ext_resource path="res://cycle/player/jump.wav" type="AudioStream" id=33]
[ext_resource path="res://cycle/player/footstep.wav" type="AudioStream" id=34]
[ext_resource path="res://cycle/coin_ding.wav" type="AudioStream" id=35]
[ext_resource path="res://cycle/room_unloader.gd" type="Script" id=36]
[ext_resource path="res://cycle/visibility_scale_fixer.gd" type="Script" id=37]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 23, 230 )

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 51, 42 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 51, 126, 51, 42 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 102, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 153, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 204, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 255, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 0, 126, 51, 42 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 51, 84, 51, 42 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 102, 126, 51, 42 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 51, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 102, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 153, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 204, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 255, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 306, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 357, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 408, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 459, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 510, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 561, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 612, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 663, 42, 51, 42 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 0, 168, 51, 42 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 4 )
region = Rect2( 51, 168, 51, 42 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 4 )
region = Rect2( 102, 168, 51, 42 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 4 )
region = Rect2( 153, 168, 51, 42 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 4 )
region = Rect2( 204, 168, 51, 42 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 4 )
region = Rect2( 255, 168, 51, 42 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 100 ) ],
"loop": false,
"name": "attack_b",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 26 ), SubResource( 25 ) ],
"loop": true,
"name": "jump_loop",
"speed": 17.0
}, {
"frames": [ SubResource( 101 ) ],
"loop": false,
"name": "attack_a",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 23 ) ],
"loop": false,
"name": "jump_start",
"speed": 15.0
}, {
"frames": [ SubResource( 102 ) ],
"loop": false,
"name": "attack_c",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": false,
"name": "idle_tap",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 22.0

[sub_resource type="RayShape2D" id=2]
length = 6.0

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 22 )
region = Rect2( 400, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 22 )
region = Rect2( 800, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 22 )
region = Rect2( 1200, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 22 )
region = Rect2( 1600, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 22 )
region = Rect2( 2000, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 22 )
region = Rect2( 2400, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 22 )
region = Rect2( 2800, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 22 )
region = Rect2( 3200, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 22 )
region = Rect2( 0, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 22 )
region = Rect2( 400, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 22 )
region = Rect2( 800, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 22 )
region = Rect2( 1200, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 22 )
region = Rect2( 1600, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 22 )
region = Rect2( 2000, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 22 )
region = Rect2( 2400, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 22 )
region = Rect2( 2800, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 22 )
region = Rect2( 3200, 100, 400, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 22 )
region = Rect2( 0, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 22 )
region = Rect2( 400, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 22 )
region = Rect2( 800, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 22 )
region = Rect2( 1200, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 22 )
region = Rect2( 1600, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 22 )
region = Rect2( 2000, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 22 )
region = Rect2( 2400, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 22 )
region = Rect2( 2800, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 22 )
region = Rect2( 3200, 200, 400, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 22 )
region = Rect2( 0, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 22 )
region = Rect2( 400, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 22 )
region = Rect2( 800, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 22 )
region = Rect2( 1200, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 22 )
region = Rect2( 1600, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 22 )
region = Rect2( 2000, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 22 )
region = Rect2( 2400, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 22 )
region = Rect2( 2800, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 22 )
region = Rect2( 3200, 300, 400, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 22 )
region = Rect2( 0, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 22 )
region = Rect2( 400, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 22 )
region = Rect2( 800, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 22 )
region = Rect2( 1200, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 22 )
region = Rect2( 1600, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 22 )
region = Rect2( 2000, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 22 )
region = Rect2( 2400, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 22 )
region = Rect2( 2800, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 22 )
region = Rect2( 3200, 400, 400, 100 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 22 )
region = Rect2( 0, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 22 )
region = Rect2( 400, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 22 )
region = Rect2( 800, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 22 )
region = Rect2( 1200, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 22 )
region = Rect2( 1600, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 22 )
region = Rect2( 2000, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 22 )
region = Rect2( 2400, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 22 )
region = Rect2( 2800, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 22 )
region = Rect2( 3200, 500, 400, 100 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 22 )
region = Rect2( 0, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 22 )
region = Rect2( 400, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 22 )
region = Rect2( 800, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 22 )
region = Rect2( 1200, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 22 )
region = Rect2( 1600, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 22 )
region = Rect2( 2000, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 22 )
region = Rect2( 2400, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 22 )
region = Rect2( 2800, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 22 )
region = Rect2( 3200, 600, 400, 100 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 22 )
region = Rect2( 0, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 22 )
region = Rect2( 400, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 22 )
region = Rect2( 800, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 22 )
region = Rect2( 1200, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 22 )
region = Rect2( 1600, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 22 )
region = Rect2( 2000, 700, 400, 100 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 22 )
region = Rect2( 2400, 700, 400, 100 )

[sub_resource type="SpriteFrames" id=99]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[node name="cycle" type="Node"]
script = ExtResource( 6 )

[node name="world" type="Node2D" parent="."]
pause_mode = 1

[node name="level" type="Node2D" parent="world"]

[node name="camera" type="Camera2D" parent="world/level" groups=["camera"]]
position = Vector2( -2601, -547 )
current = true
drag_margin_v_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="left_trigger" type="Area2D" parent="world/level/camera"]
position = Vector2( -340, 0 )
collision_layer = 0
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="world/level/camera/left_trigger"]
shape = SubResource( 6 )

[node name="right_trigger" type="Area2D" parent="world/level/camera"]
position = Vector2( 373, 0 )
collision_layer = 0
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="world/level/camera/right_trigger"]
shape = SubResource( 6 )

[node name="tween" type="Tween" parent="world/level/camera"]

[node name="listener_2d" type="Listener2D" parent="world/level/camera"]
current = true

[node name="coin_ding_sfx" type="AudioStreamPlayer2D" parent="world/level/camera" groups=["coin_ding"]]
position = Vector2( 150, -202 )
stream = ExtResource( 35 )
volume_db = -12.0
bus = "Effects"

[node name="time_ding_sfx" type="AudioStreamPlayer2D" parent="world/level/camera" groups=["time_ding"]]
position = Vector2( -150, -202 )
stream = ExtResource( 35 )
volume_db = -12.0
bus = "Effects"

[node name="player" type="RigidBody2D" parent="world/level"]
position = Vector2( -2606, -551 )
collision_layer = 2
mode = 2
physics_material_override = SubResource( 5 )
gravity_scale = 1.5
linear_damp = 0.0
script = ExtResource( 3 )

[node name="animated_sprite" type="AnimatedSprite" parent="world/level/player"]
frames = SubResource( 4 )
animation = "jump_loop"

[node name="collision_shape_2d" type="CollisionShape2D" parent="world/level/player"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="collision_shape_2d2" type="CollisionShape2D" parent="world/level/player"]
position = Vector2( 0, 15 )
shape = SubResource( 2 )

[node name="intended_direction" parent="world/level/player" instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="slope_detector" type="RayCast2D" parent="world/level/player"]
visible = false
cast_to = Vector2( 15, 12 )

[node name="fall_ray" type="RayCast2D" parent="world/level/player"]
position = Vector2( 0, 21 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="ground_detector" type="RayCast2D" parent="world/level/player"]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="label" type="Label" parent="world/level/player"]
margin_left = -89.0
margin_top = -37.0
margin_right = 89.0
margin_bottom = -23.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coyote_time" type="Timer" parent="world/level/player"]
wait_time = 0.2
one_shot = true

[node name="jump_cooldown" type="Timer" parent="world/level/player"]
wait_time = 0.2
one_shot = true

[node name="attack_duration" type="Timer" parent="world/level/player"]
wait_time = 0.2
one_shot = true

[node name="attack_cooldown" type="Timer" parent="world/level/player"]
wait_time = 0.1
one_shot = true

[node name="attack_position_a" type="Position2D" parent="world/level/player"]
position = Vector2( 15, -7 )

[node name="attack_position_b" type="Position2D" parent="world/level/player"]
position = Vector2( 19, -6 )

[node name="attack_position_c" type="Position2D" parent="world/level/player"]
position = Vector2( 21, -1 )

[node name="attack_sfx" type="AudioStreamPlayer2D" parent="world/level/player"]
stream = ExtResource( 32 )
volume_db = -3.0
bus = "Effects"

[node name="jump_sfx" type="AudioStreamPlayer2D" parent="world/level/player"]
stream = ExtResource( 33 )
volume_db = -6.0
bus = "Effects"

[node name="footstep_sfx" type="AudioStreamPlayer2D" parent="world/level/player"]
position = Vector2( 0, 15 )
stream = ExtResource( 34 )
volume_db = -12.0
bus = "Effects"

[node name="room_unloader_safehouse" type="Node2D" parent="world/level"]
script = ExtResource( 36 )
room_scene = ExtResource( 9 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_safehouse"]
position = Vector2( 524, 211 )
rect = Rect2( -893, -565, 1786, 1130 )
script = ExtResource( 37 )

[node name="room_unloader_rafters" type="Node2D" parent="world/level"]
position = Vector2( 1392, 416 )
script = ExtResource( 36 )
room_scene = ExtResource( 1 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_rafters"]
position = Vector2( 361, -479 )
rect = Rect2( -939, -941, 1878, 1882 )
script = ExtResource( 37 )

[node name="room_unloader_maze" type="Node2D" parent="world/level"]
position = Vector2( -1572, 368 )
script = ExtResource( 36 )
room_scene = ExtResource( 19 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_maze"]
position = Vector2( 489, -127 )
rect = Rect2( -1006, -565, 2012, 1130 )
script = ExtResource( 37 )

[node name="room_unloader_distant_mountains" type="Node2D" parent="world/level"]
position = Vector2( 3536, 368 )
script = ExtResource( 36 )
room_scene = ExtResource( 8 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_distant_mountains"]
position = Vector2( 0, -626 )
scale = Vector2( 1, 1.46964 )
rect = Rect2( -1394, -741, 2788, 1482 )
script = ExtResource( 37 )

[node name="room_unloader_big_disco" type="Node2D" parent="world/level"]
position = Vector2( 3644, -1818 )
script = ExtResource( 36 )
room_scene = ExtResource( 10 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_big_disco"]
position = Vector2( 350, 337 )
rect = Rect2( -1170, -770, 2340, 1540 )
script = ExtResource( 37 )

[node name="room_unloader_pyramid_scheme" type="Node2D" parent="world/level"]
position = Vector2( -2854, 384 )
script = ExtResource( 36 )
room_scene = ExtResource( 11 )

[node name="visibility_notifier_2d" type="VisibilityNotifier2D" parent="world/level/room_unloader_pyramid_scheme"]
position = Vector2( -29, -130 )
rect = Rect2( -1170, -618, 2340, 1236 )
script = ExtResource( 37 )
fix_it = true

[node name="hud" type="CanvasLayer" parent="."]
layer = 2

[node name="time_left_hud" parent="hud" instance=ExtResource( 5 )]
margin_right = 90.0

[node name="wallet_hud" parent="hud" instance=ExtResource( 27 )]

[node name="inferno_hud" type="Node2D" parent="hud"]
visible = false
script = ExtResource( 23 )

[node name="animated_sprite" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 200, 455 )
frames = SubResource( 99 )

[node name="animated_sprite2" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 575, 455 )
frames = SubResource( 99 )

[node name="animated_sprite3" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 164, -50 )
rotation = 3.14159
frames = SubResource( 99 )

[node name="animated_sprite4" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 539, -50 )
rotation = 3.14159
frames = SubResource( 99 )

[node name="animated_sprite5" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 539, -50 )
rotation = 3.14159
frames = SubResource( 99 )

[node name="animated_sprite6" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( -50, 202 )
rotation = 1.5708
frames = SubResource( 99 )

[node name="animated_sprite7" type="AnimatedSprite" parent="hud/inferno_hud"]
position = Vector2( 770, 202 )
rotation = -1.5708
frames = SubResource( 99 )

[node name="big_time" type="CenterContainer" parent="hud"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown_label" type="Label" parent="hud/big_time"]
margin_left = 72.0
margin_right = 648.0
margin_bottom = 405.0
theme = ExtResource( 29 )
custom_fonts/font = ExtResource( 28 )
text = "00:00"
align = 1
valign = 1
script = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="world/level/camera/left_trigger" to="world/level/camera" method="_on_left_trigger_body_entered"]
[connection signal="body_entered" from="world/level/camera/right_trigger" to="world/level/camera" method="_on_right_trigger_body_entered"]
[connection signal="frame_changed" from="world/level/player/animated_sprite" to="world/level/player" method="_on_animated_sprite_frame_changed"]
[connection signal="timeout" from="world/level/player/attack_duration" to="world/level/player" method="_on_attack_duration_timeout"]
[connection signal="timeout" from="world/level/player/attack_cooldown" to="world/level/player" method="_on_attack_cooldown_timeout"]
